ilex/tests/ui/eof/quoted.stderr
error: expected closing `'`, but found <eof>
 --> eof/quoted.txt:1:14
  |
1 | 'foo' '' 'bar
  |              ^ expected `'` here
  |          - help: previously opened here
  |
  = note: reported at: ilex/src/rt/emit2.rs:691:14

error: aborting due to previous error
